--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       crossorigin="anonymous"
     />
 
-   <link rel=""stylesheet" href="src/app.css" />
+   <link rel="stylesheet" href="src/app.css" />
   </head>
 
   <body>
