--- a/index.html
+++ b/index.html
@@ -92,6 +92,15 @@
         </div>
       </div>
     </div>
+    <div class="container">
+      <div class="row">
+        Hosted by Netlify
+        <br />
+        
+        <a href="https://github.com/glitterb0mb/weather-app-1" class="github">
+        Source Code via GitHub
+      </a>
+        </div>
 
     <script src="src/app.js"></script>
   </body>
