--- a/index.html
+++ b/index.html
@@ -93,13 +93,14 @@
       </div>
     </div>
     <div class="container">
+      <div class="row">
+        <br />
         Hosted by Netlify
         <br />
         <a href="https://github.com/glitterb0mb/weather-app-1" class="github">
-        Source Code via GitHub
-      </a>
-        </div>
-
+        Source Code via GitHub </a>
+      </div>
+      </div>
     <script src="src/app.js"></script>
   </body>
 </html>
